fixed(home) overflow container

--- a/app/scss/_general.scss
+++ b/app/scss/_general.scss
@@ -14,7 +14,6 @@ body {
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
-  overflow: hidden;
 }
 
 ul {
